--- a/javaScript/calcJs/main.css
+++ b/javaScript/calcJs/main.css
@@ -20,3 +20,91 @@
     border-radius: 5px;
     box-shadow: 0 4px 8px 0 rgba(255,255,0,.5), 0 6px 20px 0 rgba(197, 10, 10, 0.9)
 }
+
+#result{
+    height: 120px;
+}
+
+#history{
+    text-align: right;
+    height: 20px;
+    margin:0 20px;
+    padding-top: 20px;
+    font-size:15px;
+    color:orangered;
+}
+
+#output{
+    text-align: right;
+    height: 60px;
+    margin:10px 20px;
+    font-size:30px;
+    color:rgb(68, 63, 138);
+}
+
+
+#keyboard{
+    height: 400px;
+}
+
+.operator, .number, .empty{
+    width: 50px;
+    height: 50px;
+    margin:15px;
+    float: left;
+    border-radius: 50%;
+    border-width: 0;
+    font-weight: bold;
+    font-size: 15px;
+}
+
+.number, .empty{
+    background-color: lightgray;
+}
+
+.number, .operator{
+    cursor: pointer;
+}
+
+.number:active, .operator:active{
+    font-size: 13px;
+}
+
+.number:focus, .operator:focus{
+    outline:0;
+}
+
+button:nth-child(4){
+    font-size:20px;
+    background-color: #20b2aa;
+}
+
+button:nth-child(8){
+    font-size:20px;
+    background-color: #faa500;
+}
+
+button:nth-child(12){
+    font-size:20px;
+    background-color: #f08080;
+}
+
+button:nth-child(16){
+    font-size:20px;
+    background-color: #7d93e0;
+}
+
+button:nth-child(20){
+    font-size:20px;
+    background-color: #9477af;
+}
+
+
+
+
+
+
+
+
+
+
